<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/background_logo"
    tools:context=".activities.GroupChoice">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/appicon"
        android:transitionName="logo_image"
        app:srcCompat="@drawable/logo_image" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/black_regular"
        android:text="@string/location_tracker"
        android:layout_marginBottom="100dp"
        android:textColor="@color/teal_700"
        android:textSize="35sp"
        android:transitionName="logo_text"
       />

    <Button
        android:id="@+id/joinGroup"
        android:layout_height="60dp"
        android:backgroundTint="@color/teal_200"
        android:elevation="3dp"
        android:fontFamily="@font/mitr_medium"
        android:text="@string/join_a_group"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:transitionName="button_tran"
        android:layout_width="match_parent"/>

    <Button
        android:id="@+id/makeGroup"
        android:layout_height="60dp"
        android:backgroundTint="@color/teal_200"
        android:elevation="3dp"
        android:fontFamily="@font/mitr_medium"
        android:text="@string/make_a_group"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:transitionName="button_tran"
        android:layout_width="match_parent"/>

</LinearLayout>