<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo_image"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/title"
            android:layout_toEndOf="@id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/body"
            android:layout_toEndOf="@id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>

</RelativeLayout>