<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="#ffffff"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        app:srcCompat="@drawable/logo_image"
        android:contentDescription="@string/appicon" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/black_regular"
        android:text="@string/location_tracker"
        android:layout_marginBottom="100dp"
        android:textColor="@color/teal_700"
        android:textSize="35sp"
        android:transitionName="logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/googleSignin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:elevation="3dp"
        android:background="@drawable/background_button_google"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:src="@drawable/google_icon"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_weight="1"
            android:fontFamily="@font/mitr_medium"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarSignBtn"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>