<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:padding="20dp"
    tools:context=".activities.MakeGroup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/groupNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_image"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/logoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/black_regular"
                android:text="@string/create_a_group"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:transitionName="logo_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/groupNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/mitr_reg"
            android:text="@string/add_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groupNameLayout" />

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/groupNameText"
            android:id="@+id/groupNameTetLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:hint="@string/group_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/groupNameText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/groupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_group"
                    android:drawablePadding="20dp"
                    android:inputType="textCapWords"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <ImageButton-->
<!--                android:id="@+id/checkBtn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:onClick="checkGroupName"-->
<!--                android:padding="15dp"-->
<!--                android:layout_marginStart="5dp"-->
<!--                android:src="@drawable/ic_check"-->
<!--                android:background="@color/black"-->
<!--                app:tint="@color/white"-->
<!--                android:contentDescription="@string/app_name" />-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupNameTetLayout">

            <TextView
                android:id="@+id/memberEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/mitr_reg"
                android:text="@string/add_members"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/member_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/groupNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/memberEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_group_add"
                    android:drawablePadding="20dp"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/mitr_medium"
                android:text="@string/add_member"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBarAddEmail"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addedMembersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            tools:layout_editor_absoluteY="20dp">

            <TextView
                android:id="@+id/addedMembersText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/mitr_reg"
                android:text="@string/added_members"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout1" />


            <LinearLayout
                android:id="@+id/membersLayoutView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:enabled="false"
            android:fontFamily="@font/mitr_medium"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/groupNameLayout"
            app:layout_constraintTop_toBottomOf="@id/addedMembersLayout"
            tools:layout_editor_absoluteY="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>