<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/myGroupsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_image"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/logoText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/black_regular"
                android:text="@string/my_groups"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:transitionName="logo_text" />

            <ImageView
                android:id="@+id/homeBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_home"
                android:background="@color/teal_700"
                app:tint="@color/white"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/createdGroupsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/myGroupsText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mitr_reg"
                android:text="@string/created"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/createdProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:indeterminateTint="@color/white"
                />

            <TextView
                android:id="@+id/pleaseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/please_wait"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/makeGroupBtn"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:visibility="gone"
                android:textColor="@color/teal_700"
                android:fontFamily="@font/mitr_medium"
                android:text="@string/make_a_group"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:transitionName="button_tran"
                android:layout_gravity="center"
                android:layout_width="wrap_content"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myGroupsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:spanCount="2"
                android:clickable="true"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/groups_recyclerview"
                android:orientation="vertical"
                android:focusable="true" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>