<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appicon"
            android:transitionName="logo_image"
            app:srcCompat="@drawable/logo_image" />

        <TextView
            android:id="@+id/textLogoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/black_regular"
            android:gravity="center"
            android:text="Hello There, Welcome!"
            android:textColor="@color/teal_700"
            android:textSize="40sp"
            android:transitionName="logo_text" />

        <TextView
            android:id="@+id/subtextLogoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/login_to_your_account"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:transitionName="logo_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="text|textCapWords"
                android:transitionName="email_tran">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPasswordsLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:transitionName="password_tran"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPasswords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/teal_700"
                android:elevation="3dp"
                android:fontFamily="@font/mitr_medium"
                android:text="@string/login"
                android:textSize="18sp"
                android:transitionName="button_tran" />

            <TextView
                android:id="@+id/notCreatedAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/not_have_an_account_click_here"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:transitionName="text_tran" />

            <ProgressBar
                android:id="@+id/progressBarLogin"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>